--- a/index.html
+++ b/index.html
@@ -4,11 +4,147 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fishing Game</title>
-<link rel="stylesheet" href="style.css">
+<style>
+    body {
+        margin: 0;
+        overflow: hidden;
+        font-family: sans-serif;
+    }
+    #message {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 32px;
+        color: white;
+        text-shadow: 2px 2px 5px black;
+        display: none;
+        pointer-events: none;
+        text-align: center;
+    }
+</style>
 </head>
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 <div id="message"></div>
-<script src="script.js"></script>
+<script>
+window.onload = function() {
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+
+    const WIDTH = canvas.width;
+    const HEIGHT = canvas.height;
+
+    // Player
+    let player = { x: 100, y: 100, size: 30, color: "yellow", speed: 4, inBoat: false };
+
+    // Boat
+    let boat = null;
+
+    // Islands
+    const islands = [
+        { x: 150, y: 400, width: 200, height: 80, color: "green" },
+        { x: 500, y: 150, width: 200, height: 100, color: "darkgreen" }
+    ];
+
+    // Fishing
+    let fishing = false;
+    let clicks = 0;
+
+    // Input
+    let keys = {};
+    document.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
+    document.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
+    canvas.addEventListener("mousedown", () => { if(fishing) clicks++; });
+
+    // Message display
+    const messageDiv = document.getElementById("message");
+
+    function draw() {
+        // Clear
+        ctx.fillStyle = "blue";
+        ctx.fillRect(0, 0, WIDTH, HEIGHT);
+
+        // Draw islands
+        islands.forEach(isle => {
+            ctx.fillStyle = isle.color;
+            ctx.fillRect(isle.x, isle.y, isle.width, isle.height);
+            // Decorations: trees
+            ctx.fillStyle = "darkolivegreen";
+            for(let i=0; i<5; i++){
+                ctx.beginPath();
+                ctx.arc(isle.x + 20 + i*30, isle.y + 10, 10, 0, Math.PI*2);
+                ctx.fill();
+            }
+        });
+
+        // Draw boat
+        if (boat) {
+            ctx.fillStyle = "brown";
+            ctx.fillRect(boat.x, boat.y, 60, 30);
+        }
+
+        // Draw player
+        ctx.fillStyle = player.color;
+        ctx.fillRect(player.x, player.y, player.size, player.size);
+    }
+
+    function update() {
+        // Player movement
+        let speed = player.inBoat && boat ? 3 : player.speed;
+        if (keys["arrowleft"]) player.x -= speed;
+        if (keys["arrowright"]) player.x += speed;
+        if (keys["arrowup"]) player.y -= speed;
+        if (keys["arrowdown"]) player.y += speed;
+
+        // Boat movement
+        if (player.inBoat && boat) {
+            boat.x = player.x - 15;
+            boat.y = player.y - 5;
+        }
+
+        // Check water (not on island)
+        let onIsland = islands.some(isle => player.x + player.size > isle.x && player.x < isle.x + isle.width &&
+                                             player.y + player.size > isle.y && player.y < isle.y + isle.height);
+        let inWater = !onIsland;
+
+        // Spawn boat if touching water and no boat yet
+        if (inWater && !boat) {
+            boat = { x: player.x - 15, y: player.y - 5 };
+            player.inBoat = true;
+        }
+
+        // Fishing
+        if (keys["f"] && inWater && !fishing) {
+            fishing = true;
+            clicks = 0;
+            messageDiv.style.display = "none";
+            // Wait 5 seconds before fish appears
+            setTimeout(() => {
+                messageDiv.innerText = "You caught a fish! Click 10 times in 5 seconds!";
+                messageDiv.style.display = "block";
+                // End fishing after 5 sec
+                setTimeout(() => {
+                    if (clicks >= 10) {
+                        messageDiv.innerText = "Fish successfully caught!";
+                    } else {
+                        messageDiv.innerText = "Fish escaped!";
+                    }
+                    setTimeout(() => { messageDiv.style.display = "none"; fishing=false; }, 2000);
+                }, 5000);
+            }, 5000);
+        }
+    }
+
+    function gameLoop() {
+        update();
+        draw();
+        requestAnimationFrame(gameLoop);
+    }
+
+    gameLoop();
+};
+</script>
 </body>
 </html>
+
